<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.3</version>
    <relativePath></relativePath>
  </parent>

  <groupId>com.fortytwotalents</groupId>
  <artifactId>speaker-cards-generator</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>speaker-cards-generator</name>
  <description>Speaker Cards Generator for Voxxed Days and similar conferences</description>

  <properties>
    <jacoco.version>0.8.14</jacoco.version>
    <java.version>21</java.version>
    <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
    <openhtmltopdf.version>1.0.10</openhtmltopdf.version>
    <poi-ooxml.version>5.5.1</poi-ooxml.version>
    <bootstrap.version>5.3.8</bootstrap.version>
    <bootstrap.icons.version>1.13.1</bootstrap.icons.version>
    <!-- Plugin versions -->
    <spring-javaformat.version>0.0.47</spring-javaformat.version>
  </properties>

  <dependencies>
    <!-- Spring Boot Starters -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-restclient</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- Database -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- HTML → PDF (OpenHTMLtoPDF) and PDF → PNG (PDFBox) for banner generation -->
    <dependency>
      <groupId>com.openhtmltopdf</groupId>
      <artifactId>openhtmltopdf-pdfbox</artifactId>
      <version>${openhtmltopdf.version}</version>
    </dependency>
    <dependency>
      <groupId>com.openhtmltopdf</groupId>
      <artifactId>openhtmltopdf-slf4j</artifactId>
      <version>${openhtmltopdf.version}</version>
    </dependency>

    <!-- Apache POI for XLSX/CSV import -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${poi-ooxml.version}</version>
    </dependency>

    <!-- Bootstrap CSS/JS via WebJars -->
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>${bootstrap.version}</version>
    </dependency>
    <dependency>
      <groupId>org.webjars.npm</groupId>
      <artifactId>bootstrap-icons</artifactId>
      <version>${bootstrap.icons.version}</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>webjars-locator-lite</artifactId>
    </dependency>

    <!-- Docker Compose – auto-starts compose services during local development -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-docker-compose</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Actuator – exposes /actuator/health for Docker health checks -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Spring Boot repackaging -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <!-- Enforce minimum Java and Maven versions -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>[21,)</version>
                  <message>Java 21 or higher is required.</message>
                </requireJavaVersion>
                <requireMavenVersion>
                  <version>[3.9,)</version>
                  <message>Maven 3.9 or higher is required.</message>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- JaCoCo code-coverage -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <!-- Spring Java Format -->
      <plugin>
        <groupId>io.spring.javaformat</groupId>
        <artifactId>spring-javaformat-maven-plugin</artifactId>
        <version>${spring-javaformat.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>validate</goal>
            </goals>
            <phase>validate</phase>
            <inherited>true</inherited>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <url>https://github.com/patbaumgartner/speaker-cards-generator</url>
  <inceptionYear>2024</inceptionYear>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/patbaumgartner/speaker-cards-generator.git</connection>
    <developerConnection>scm:git:git@github.com:patbaumgartner/speaker-cards-generator.git</developerConnection>
    <url>https://github.com/patbaumgartner/speaker-cards-generator</url>
  </scm>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/patbaumgartner/speaker-cards-generator/issues</url>
  </issueManagement>

</project>
